# learncplusplsu

./: .gitignore  CMakeLists.txt  FIXES_IMPLEMENTED.md  PLAY_STORE_GUIDE.md  PROJECT_COMPLETION_SUMMARY.md  README.md  SRS_REVIEW.md  TUTORIAL_THEME_ENHANCEMENT_SUMMARY.md  build_cpp_compiler.bat  build_cpp_compiler.sh  build_cpp_compiler_optimized.bat  build_cpp_compiler_optimized.sh  cpp_compiler.py  cpp_compiler_optimized.cpp  fix_android_build.bat  fix_android_build.sh  launch_emulator.ps1  pubspec.yaml  setup_android_env.bat  test_python_compiler.py
android/: build.gradle.kts
android/app/: build.gradle.kts
lib/: main.dart
lib/data/: grade6_lessons.dart
lib/providers/: app_provider.dart  lesson_provider.dart  progress_provider.dart
lib/screens/: background_test_screen.dart  cpp_play_store_screen.dart  home_screen.dart  ide_screen.dart  lesson_screen.dart  onboarding_screen.dart  oop_tutorial_08_static_members.dart  oop_tutorial_12_default_parameters.dart  oop_tutorial_screen.dart  profile_screen.dart  provider_test_screen.dart  quiz_screen.dart  settings_screen.dart  splash_screen.dart  test_screen.dart
lib/services/: advanced_ide_service.dart  ai_service.dart  analytics_service.dart  app_initialization_service.dart  background_callback.dart  background_service.dart  challenge_service.dart  collaboration_service.dart  cpp_execution_service.dart  cpp_execution_service_optimized.dart  crash_reporting_service.dart  database_service.dart  (+12 more)
test/: cpp_execution_service_test.dart  integration_test.dart  widget_test.dart
web/: index.html  manifest.json
(+57 files in other folders)
